# energy-alpscore

./: CMakeLists.txt  README.md  main.cpp  tail_check.cpp
Docs/: EnergyCalculation.lyx
cmake/: FindTCLAP.cmake
